<resources>
    <string name="app_name">装修记账</string>
    <string name="action_settings">设置</string>

    <!--Common -->
    <string name="btn_name_ok">确认</string>
    <string name="btn_name_cancel">取消</string>
    <!--Common-->

    <string name="action_sync">Sync</string>
    <string name="default_total_date">2016/03/21</string>
    <string name="total_cost">总共支出</string>
    <string name="default_total_cost">0.00</string>
    <string name="input_start_cost">请输入金额</string>
    <string name="start_input_title">记一笔</string>
    <string name="cost_detail_title">支出详细</string>
    <string name="menu_setting">设置</string>
    <string name="menu_login">登陆</string>
    <string name="menu_sync">同步</string>
    <string name="menu_finish">完成</string>
    <string name="menu_preview">预览</string>
    <string name="menu_delete">删除</string>
    <string name="confirm_to_delete_image">确定要删除这张图片吗？</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_list">换行</string>
    <string name="detail_total_value">总额</string>
    <string name="detail_total_date">日期：</string>
    <string name="detail_category_label">标签：</string>
    <string name="detail_brand_label">品牌：</string>
    <string name="detail_position_label">位置：</string>
    <string name="detail_comments_label">备注：</string>

    <string name="total_list_indicator">|</string>
    <string name="total_list_brand_default">无</string>
    <string name="total_list_category_default">默认分类</string>

    <string name="add_comments_app_name">添加备注</string>
    <string name="add_comments_hint">添加备注(最多100字)</string>
    <string name="image_selector_app_name">选择图片</string>
    <string name="image_number_name">张</string>
    <string name="image_scan_no_name">哈哈，这里空空如也</string>
    <string name="image_scan_loading">正在加载</string>
    <string name="image_scan_no_external_device">暂无外部存储</string>
    <string name="account_image_add_text">+</string>

    <string name="delete_title">提示</string>
    <string name="confirm_to_delete">确定要删除这条记录吗？</string>
    <string name="network_disconnect">网络不可用, 请连接网络再试。</string>
    <string name="wifi_network_disconnect">WIFI网络不可用, 请连接WIFI再试或者在setting中改变设置。</string>
    <string name="give_up_edit">退出此次编辑？</string>
    <string name="give_up_sure">确定</string>
    <string name="give_up_cancel">取消</string>
    <string name="give_up_title">提示</string>
    <string name="give_up_success">删除成功</string>
    <string name="get_data_error">获取数据失败</string>

    <!--ADD Category -->
    <string name="add_category_app_name">买的啥</string>
    <string name="add_category_app_lable">买的啥: </string>
    <string name="recent_label_text">最近使用</string>
    <string name="add_new_category_hint">输入新的标签，如地板</string>
    <!--ADD Category -->

    <!--ADD Brand -->
    <string name="add_brand_app_name">啥品牌</string>
    <string name="add_brand_app_lable">啥品牌: </string>
    <string name="hot_brand_label_text">热门品牌</string>
    <string name="add_new_brand">新建品牌</string>
    <string name="add_new_brand_hint">输入新的品牌，如大自然</string>
    <!--ADD Brand -->

    <!--ADD Position -->
    <string name="add_position_app_name">哪买的</string>
    <string name="add_position_app_lable">哪买的: </string>
    <string name="hot_position_label_text">热门位置</string>
    <string name="add_new_position">新建位置</string>
    <string name="add_new_position_hint">输入位置开始搜索，如红星美凯龙</string>
    <string name="end">已经是最后一页啦</string>
    <string name="add_position_shopping_offline">实体店</string>
    <string name="add_position_shopping_online">网购</string>
    <string name="add_new_online_hint">输入新的网站，如淘宝</string>
    <!--ADD Position -->

    <!--Slide Menu-->
    <string name="account_not_log_in">立即登陆</string>
    <string name="account_sort_desc">按金额由大到小显示</string>
    <string name="account_sort_asc">按金额由小到大显示</string>
    <string name="account_browser_picture">所有图片</string>
    <string name="account_sort_sync">同步</string>
    <string name="account_search">搜索</string>
    <string name="account_comment">意见反馈</string>
    <string name="account_setting">设置</string>
    <!--Slide Menu -->

    <!--Login poup-->
    <string name="account_login">登陆</string>
    <string name="account_login_weixin">微信</string>
    <string name="account_login_weibo">微博</string>
    <string name="account_login_qq">QQ</string>
    <string name="account_login_register">注册</string>
    <string name="account_login_register_text">注册/登陆</string>
    <string name="account_username_hint_text">用户名（5-20个字符，由字母和数字组成）</string>
    <string name="account_password_hint_text">密码（6-20位）</string>
    <string name="account_login_success">登陆成功</string>
    <string name="account_login_failed">登陆失败</string>
    <string name="account_already_login_success">已登陆</string>
    <string name="account_login_wait">下次再说</string>
    <string name="account_login_go_now">马上登陆</string>
    <string name="account_login_notice_body">亲，这个功能需要登陆后才能使用哦。</string>
    <!--Login poup -->

    <!--serach activity-->
    <string name="account_search_indicator">共找到记录: </string>
    <string name="account_search_hint">请输入关键字...</string>
    <string name="account_search_failed">抱歉，没有找到相关内容</string>
    <string name="account_search_recently">最近搜索</string>
    <string name="account_search_clear_history">清空历史搜索</string>
    <string name="accout_search_clear_history_success">删除成功</string>
    <!--serach activity -->

    <!--Image selector -->
    <string name="account_image_max_number">最多只能选择4张图片</string>
    <!--Image selector -->

    <!--Sync service  -->
    <string name="account_sync_service_start">同步任务开始</string>
    <string name="account_sync_service_success">同步任务完成</string>
    <string name="account_sync_service_error">同步任务发生错误</string>
    <string name="account_sync_service_already_start">同步任务正在进行，稍后再尝试</string>

    <string name="account_guide_chose_style">选择装修风格，记账更加智能</string>
    <string name="account_guide_chose_budget">设置装修预算，超支提前预警</string>
    <string name="account_guide_chose_area">选择装修面积，大数据预测费用</string>
    <string name="account_guide_not_chose_style">装修风格未选择</string>
    <string name="account_guide_not_chose_budget">装修预算未选择</string>
    <string name="account_guide_not_chose_area">装修面积未选择</string>
    <string name="account_guide_start_use">"开始记账"</string>
    <string name="account_my_user_info">"我"</string>
    <string name="account_my_user_info_unknow">"未知"</string>

    <!--feed back -->
    <string name="account_feedback_thanks">非常感谢您的宝贵意见</string>
    <string name="account_feedback_empty">_(:з」∠)_</string>
    <string name="account_feedback_failed">提交失败</string>
    <string name="account_feedback_success">提交成功</string>
    <string name="hint_suggesion">给我们提意见</string>
    <string name="send">发送</string>
    <!--feed back  -->

    <!--setting -->
    <string name="only_for_wifi">只在WIFI下同步</string>
    <string name="quick_add">启动后直接记账</string>
    <string name="suggestion">意见反馈</string>
    <string name="recommend_to_friend">设置服务端地址</string>
    <string name="update_version">检测更新</string>
    <string name="focus_us">关注我们</string>
    <string name="rate_for_us">为我们评分</string>
    <string name="can_not_open_market">无法打开市场</string>
    <!--setting -->

    <string name="accout_empty_prepare_start">这里空空如也，开始记账吧</string>
    <string name="accout_empty_image_start">这里空空如也，开始在记账中添加图片吧</string>
</resources>
