<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.account.AccountTotalActivity" >

    <item
        android:id="@+id/total_account_sync"
        android:icon="@mipmap/ic_refresh"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_login"
                android:title="@string/menu_login"/>
            <item
                android:id="@+id/menu_sync"
                android:title="@string/menu_sync"/>
            <item
                android:id="@+id/menu_setting"
                android:title="@string/menu_setting"/>
        </menu>
    </item>

</menu>