<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/register_fragment_contente"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">

    <EditText
        android:id="@+id/username_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="left|center_vertical"
        android:lineSpacingExtra="6dip"
        android:hint="@string/account_username_hint_text"
        android:textSize="16sp"
        android:textColor="@color/content_text_color" />



    <EditText
        android:id="@+id/password_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/username_content"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:lineSpacingExtra="6dip"
        android:hint="@string/account_password_hint_text"
        android:textColor="@color/content_text_color" />


    <Button
        android:id="@+id/account_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/account_login" />

</RelativeLayout>