<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/account_start_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@color/account_top_background_color" >

        <TextView
            android:id="@+id/start_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/default_total_date"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date_title"
            android:layout_centerHorizontal="true"
            android:text="@string/input_start_cost"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/start_input_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_value_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:cursorVisible="false"
            android:hint="@string/default_total_cost"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:maxLength="10"
            android:textSize="60sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/account_more_info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_start_top"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent" >
    </ListView>


</RelativeLayout>