<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.account.AccountTotalActivity"
    tools:showIn="@layout/activity_account_total">

    <RelativeLayout
        android:id="@+id/account_total_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@color/account_top_background_color" >

        <TextView
            android:id="@+id/total_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/default_total_date"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_date_title"
            android:layout_centerHorizontal="true"
            android:text="@string/total_cost"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_value_label"
            android:layout_centerHorizontal="true"
            android:text="@string/default_total_cost"
            android:textColor="#fff"
            android:textSize="60sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/account_detail_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/account_total_top"
        android:layout_marginTop ="10dp"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent" >
    </ListView>

    <Button
        android:id="@+id/AddButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/large_ic_compose" />
</RelativeLayout>
