<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/account_search_result_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@android:color/white" >

    <TextView
        android:id="@+id/total_search_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/account_search_indicator"
        android:textColor="@color/red_color"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/total_search_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/total_search_number_label"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/red_color"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/account_search_result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop ="20dp"
        android:divider="?android:attr/listDivider"
        android:dividerHeight="1px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_search_history_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/total_search_history_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/account_search_recently"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/account_search_history_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop ="20dp"
            android:divider="?android:attr/listDivider"
            android:dividerHeight="1px" />

        <View
            android:id="@+id/search_history_list_bottom_line"
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_below="@id/account_search_history_list"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/clear_search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/search_history_list_bottom_line"
            android:text="@string/account_search_clear_history"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>